# PiOs

./: .gitignore  CMakeLists.txt  README.md  debug.gdb
docs/: startup
kernel/: BCM2837.h  bootstrap.cpp  config.h  emmc.cpp  emmc.h  gpio.cpp  gpio.h  helper.S  ktypes.h  linker.ld  loader.S  mailbox.cpp  mailbox.h  main.cpp  pager.cpp  pager.h  timer.cpp  timer.h  uart0.cpp  uart0.h  uart1.cpp  uart1.h
kernel/apps/fileManager/: main.cpp
